# aqueductus

./: .flake8  .gitignore  README.md  pyproject.toml
.github/workflows/: python-publish.yml
aqueductus/: __main__.py  main.py  providers.py  reporters.py  runner.py  testers.py
tests/: contains_rows.csv  not_contains_rows.csv  providers.yml  test_common_asserts.yml  test_runner.py
